editor/zed-pluto/grammars/pluto/grammar.js
    source_file: ($) =>
      seq(
        repeat(seq(repeat($._newline), $._top_level_item)),
        repeat($._newline),
      ),

    _newline: (_) => token(/\n/),

    _top_level_item: ($) =>
      choice(
        $.function_definition,
        $.class_definition,
        $.trait_definition,
        $.enum_definition,
        $.error_definition,
        $.app_definition,
        $.import_declaration,
        $.extern_fn_declaration,
        $.extern_rust_declaration,
        $.test_definition,
      ),

    import_declaration: ($) =>
      seq("import", $.identifier),

    extern_rust_declaration: ($) =>
      seq(
        "extern",
        "rust",
        field("path", $.string),
        "as",
        field("alias", $.identifier),
      ),

    // ─── Functions ─────────────────────────────────────────────────

    function_definition: ($) =>
      seq(
        optional("pub"),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(field("return_type", $._type)),
        choice($.block, $._newline),
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional($._newlines),
        optional(
          seq(
            $.parameter,
            repeat(seq(",", optional($._newlines), $.parameter)),
            optional(","),
            optional($._newlines),
          ),
        ),
        ")",
      ),

    parameter: ($) =>
      seq(
        optional("mut"),
        field("name", choice($.identifier, $.self_)),
        ":",
        field("type", $._type),
      ),

    type_parameters: ($) =>
      seq("<", $.identifier, repeat(seq(",", $.identifier)), ">"),

    // ─── Classes ───────────────────────────────────────────────────

    class_definition: ($) =>
      seq(
        optional("pub"),
        "class",
        field("name", $.identifier),
        optional($.type_parameters),
        optional($.impl_clause),
        optional($.uses_clause),
        optional($.bracket_deps),
        "{",
        repeat($._newline),
        repeat($.class_member),
        "}",
      ),

    impl_clause: ($) =>
      seq("impl", $.identifier, repeat(seq(",", $.identifier))),

    bracket_deps: ($) =>
      seq(
        "[",
        optional($._newlines),
        $.bracket_dep,
        repeat(seq(",", optional($._newlines), $.bracket_dep)),
        optional(","),
        optional($._newlines),
        "]",
      ),

    bracket_dep: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    class_member: ($) =>
      seq(
        choice($.field_definition, $.function_definition),
        repeat($._newline),
      ),

    field_definition: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    // ─── Traits ────────────────────────────────────────────────────

    trait_definition: ($) =>
      seq(
        optional("pub"),
        "trait",
        field("name", $.identifier),
        "{",
        repeat($._newline),
        repeat($.trait_member),
        "}",
      ),

    trait_member: ($) =>
      seq($.function_definition, repeat($._newline)),

    // ─── Enums ─────────────────────────────────────────────────────

    enum_definition: ($) =>
      seq(
        optional("pub"),
        "enum",
        field("name", $.identifier),
        optional($.type_parameters),
        "{",
        repeat($._newline),
        repeat(seq($.enum_variant, repeat($._newline))),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(
          seq(
            "{",
            optional($._newlines),
            optional(
              seq(
                $.field_definition,
                repeat(seq(",", optional($._newlines), $.field_definition)),
                optional(","),
                optional($._newlines),
              ),
            ),
            "}",
          ),
        ),
      ),

    // ─── Errors ────────────────────────────────────────────────────

    error_definition: ($) =>
      seq(
        optional("pub"),
        "error",
        field("name", $.identifier),
        "{",
        repeat($._newline),
        repeat(seq($.field_definition, repeat($._newline))),
        "}",
      ),

    // ─── App ───────────────────────────────────────────────────────

    app_definition: ($) =>
      seq(
        "app",
        field("name", $.identifier),
        optional($.bracket_deps),
        "{",
        repeat($._newline),
        repeat($.app_member),
        "}",
      ),

    app_member: ($) =>
      seq(
        choice($.ambient_declaration, $.function_definition),
        repeat($._newline),
      ),

    ambient_declaration: ($) => seq("ambient", $.identifier),

    // ─── Test ──────────────────────────────────────────────────────

    test_definition: ($) =>
      seq("test", field("name", $.string), $.block),

    // ─── Blocks & Statements ───────────────────────────────────────

    block: ($) =>
      seq("{", repeat($._newline), repeat($._statement_with_newline), "}"),

    _statement_with_newline: ($) =>
      seq($._statement, repeat1($._newline)),

    let_statement: ($) =>
      seq(
        "let",
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    return_statement: ($) =>
      seq("return", optional($._expression)),

    expression_statement: ($) => $._expression,

    // ─── Expressions ───────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.propagate_expression,
        $.catch_expression,
        $.cast_expression,
        $.spawn_expression,
        $.range_expression,
        $.closure_expression,
        $.struct_literal,
        $.enum_expression,
        $.primary_expression,
      ),

    binary_expression: ($) => {
      const table = [
        [prec.left, 1, "||"],
        [prec.left, 2, "&&"],
        [prec.left, 3, "|"],
        [prec.left, 4, "^"],
        [prec.left, 5, "&"],
        [prec.left, 6, choice("==", "!=")],
        [prec.left, 7, choice("<", ">", "<=", ">=")],
        [prec.left, 8, choice("<<", ">>")],
        [prec.left, 9, choice("+", "-")],
        [prec.left, 10, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([fn, p, ops]) =>
          fn(
            p,
            seq(
              field("left", $._expression),
              field("operator", ops),
              optional($._newlines),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    unary_expression: ($) =>
      prec(11, seq(field("operator", choice("-", "!", "~")), field("operand", $._expression))),

    call_expression: ($) =>
      prec(
        13,
        seq(
          field("function", $.identifier),
          $.argument_list,
        ),
      ),

    method_call_expression: ($) =>
      prec.left(
        13,
        seq(
          field("object", $._expression),
          ".",
          field("method", $.identifier),
          $.argument_list,
        ),
      ),

    field_expression: ($) =>
      prec.left(13, seq(field("object", $._expression), ".", field("field", $.identifier))),

    index_expression: ($) =>
      prec(
        13,
        seq(
          field("object", $._expression),
          "[",
          optional($._newlines),
          field("index", $._expression),
          optional($._newlines),
          "]",
        ),
      ),

    propagate_expression: ($) =>
      prec(12, seq(field("expression", $._expression), "!")),

    catch_expression: ($) =>
      prec.right(
        0,
        seq(
          field("expression", $._expression),
          "catch",
          field("handler", $._expression),
        ),
      ),

    cast_expression: ($) =>
      prec.left(
        12,
        seq(field("expression", $._expression), "as", field("type", $._type)),
      ),

    spawn_expression: ($) =>
      prec.right(0, seq("spawn", field("call", $.call_expression))),

    closure_expression: ($) =>
      prec.right(
        0,
        seq(
          $.closure_parameters,
          "=>",
          optional($._newlines),
          field("body", choice($.block, $._expression)),
        ),
      ),

    closure_parameters: ($) =>
      seq(
        "(",
        optional($._newlines),
        optional(
          seq(
            $.parameter,
            repeat(seq(",", optional($._newlines), $.parameter)),
            optional(","),
            optional($._newlines),
          ),
        ),
        ")",
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional($._newlines),
        optional(
          seq(
            $._expression,
            repeat(seq(",", optional($._newlines), $._expression)),
            optional(","),
            optional($._newlines),
          ),
        ),
        ")",
      ),

    primary_expression: ($) =>
      choice(
        $.identifier,
        $.integer,
        $.float,
        $.string,
        $.boolean,
        $.self_,
        $.array_literal,
        $.map_literal,
        $.set_literal,
        $.parenthesized_expression,
      ),

    array_literal: ($) =>
      seq(
        "[",
        optional($._newlines),
        optional(
          seq(
            $._expression,
            repeat(seq(",", optional($._newlines), $._expression)),
            optional(","),
            optional($._newlines),
          ),
        ),
        "]",
      ),

    _type: ($) =>
      choice(
        $.named_type,
        $.array_type,
        $.function_type,
        $.generic_type,
        $.qualified_type,
      ),

    named_type: ($) => $.identifier,

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer: (_) => /[0-9][0-9_]*/,

    float: (_) => /[0-9][0-9_]*\.[0-9][0-9_]*/,

    string: (_) => seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),

    boolean: (_) => choice("true", "false"),

    self_: (_) => "self",

    _newlines: ($) => repeat1($._newline),
  },
});
